--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,116 @@
-# dependencies
+# Dependencies
 /node_modules
+/nextjs-app/node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
+/nextjs-app/coverage
+**/.nyc_output
+**/__tests__/__coverage__
+jest-coverage
 
-# next.js
+# Next.js
 /.next/
+/nextjs-app/.next/
 /out/
+/nextjs-app/out/
 
-# production
+# Production
 /build
+/dist
+/nextjs-app/build
+/nextjs-app/dist
+/nextjs-app/.turbo
 
-# misc
+# Misc
 .DS_Store
 *.pem
+Thumbs.db
+**/.DS_Store
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+*.log
+logs/
 
-# local env files
+# Local env files
+.env
 .env.local
+.env*.local
+/nextjs-app/.env*
 .env.development.local
 .env.test.local
 .env.production.local
 
-# vercel
+# Vercel
 .vercel
 
 # TypeScript
-*.tsbuildinfo 
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Temporary files
+.temp/
+.cache/
+.tmp/
+tmp/
+temp/
+
+# Generated files we don't want to track
+public/sitemap*.xml
+public/robots.txt
+public/feed.xml
+
+# Import/export data files that may contain sensitive information
+**/*.csv
+**/*.xlsx
+**/*.xls
+
+# Script outputs
+**/*.out
+
+# OS generated files
+**/Thumbs.db
+**/ehthumbs.db
+**/Desktop.ini
+
+# Debug files
+**/.debug
+**/*.stackdump
+
+# Backup files
+**/*~
+**/*.bak
+**/*.swp
+**/*.swo
+
+# Local configuration that should not be shared
+**/.npmrc
+**/config.local.js
+**/config.local.json
+**/config.local.ts
+
+# Specific project files with sensitive data
+reset_jwt.sql
+fix_users.sql
+import_csv_data.js
+insert_questionnaires.js
+insert_questionnaires.sql
+nextjs-app/scripts/add-email-to-users.js
+nextjs-app/scripts/cleanup-duplicate-users.js 
