--- a/nextjs-app/vercel.json
+++ b/nextjs-app/vercel.json
@@ -7,14 +7,11 @@
     }
   ],
   "env": {
-    "DATABASE_URL": "@database_url",
-    "JWT_SECRET": "@jwt_secret",
     "NODE_ENV": "production"
   },
   "build": {
     "env": {
-      "DATABASE_URL": "@database_url",
-      "JWT_SECRET": "@jwt_secret"
+      "NODE_ENV": "production"
     }
   }
 } 
