--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/date-fns": "^2.5.3",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.6.2",
@@ -25,6 +26,7 @@
     "cookie": "^0.6.0",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.16.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
