--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "killservers": "./kill-servers.sh",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "verify-db": "node scripts/verify-supabase.js"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
@@ -23,6 +24,7 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.8",
+    "colors": "^1.4.0",
     "cookie": "^0.6.0",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
