Fix documentation and code errors

--- a/nextjs-app/.eslintrc.json
+++ b/nextjs-app/.eslintrc.json
@@ -9,5 +9,10 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
+  },
+  "parserOptions": {
+    "babelOptions": {
+      "presets": ["next/babel"]
+    }
   }
 } 
